--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,8 +11,8 @@
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="369dp"
-        android:layout_height="409dp"
+        android:layout_width="373dp"
+        android:layout_height="481dp"
         android:layout_marginTop="28dp"
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintStart_toStartOf="parent"
@@ -23,6 +23,7 @@
         android:id="@+id/saveButton"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="#000000"
         android:text="Save"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent"
