login and register fragment added

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -17,7 +17,7 @@
         map:layout_constraintEnd_toEndOf="parent"
         map:layout_constraintStart_toStartOf="parent"
         map:layout_constraintTop_toTopOf="parent"
-        tools:context=".view.MapsActivity" />
+        tools:context=".view.activity.MapsActivity" />
 
     <Button
         android:id="@+id/saveButton"
