--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -33,7 +33,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FOR HUMAN"
+        android:text="İnsan"
         android:textAllCaps="true"
         android:textColor="#000000"
         android:textSize="20dp"
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
-        android:text="FOR anımal"
+        android:text="Hayvan"
         android:textAllCaps="true"
         android:textColor="#000000"
         android:textSize="20dp"
