--- a/app/src/main/res/layout/edit_upl_layout.xml
+++ b/app/src/main/res/layout/edit_upl_layout.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -34,12 +34,11 @@
 
             <ImageView
                 android:id="@+id/imageLay"
-                android:layout_marginTop="10dp"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_add_image">
-            </ImageView>
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_add_image" />
 
             <TextView
                 android:id="@+id/textView5"
@@ -82,11 +81,11 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="15dp"
-                android:hint="Yardım Açıklaması"
-                android:textAlignment="center"
+                android:hint="Açıklama"
                 android:inputType="textPersonName"
                 android:maxLength="130"
                 android:padding="15dp"
+                android:textAlignment="center"
                 android:textColorHint="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold" />
