--- a/app/src/main/res/menu/scream_menu.xml
+++ b/app/src/main/res/menu/scream_menu.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
         android:id="@+id/add_post"
-        android:title="Add Post" />
+        android:title="Gönderi Ekle" />
     <item
         android:id="@+id/signout"
-        android:title="Sign Out" />
-
+        android:title="Çıkış Yap" />
 </menu>
